--- a/res/cfg/npc.cfg
+++ b/res/cfg/npc.cfg
@@ -4,10 +4,14 @@
         {"type":"path","styleType":"fill","style":"red","points":[[0,20],[-10,-15],[10,-15]]}
     ]
 },
+
+
+
+
 {
     "type":"npc_0001",
     "items":[
-        {"res":"@s1#npc01","type":"video"}
+        {"res":"@s1#npc01","type":"video","area":{"width":209,"height":225}}
     ]
 }
 ]
