--- a/res/cfg/resource.cfg
+++ b/res/cfg/resource.cfg
@@ -1,6 +1,5 @@
 [
-     {"id":"empty_video","type":"video","url":"res/320x240.ogg","loop":true,"volume":0.5}
-     ,{"id":"girl001","type":"image","url":"res/t.jpg"}
+     {"id":"girl001","type":"image","url":"res/t.jpg"}
      ,{"id":"fire001","type":"image","url":"res/fire.jpg"}
      ,{"id":"npc01","type":"image","url":"res/img/npc01.png"}
 ]
