--- a/res/packages.cfg
+++ b/res/packages.cfg
@@ -1,12 +1,12 @@
 {
   "reource":[
-    {"path":"res/cfg/loading.cfg","scene":"loading"}
-    ,{"path":"res/cfg/resource.cfg","scene":"s1"}
+    {"path":"res/cfg/resource.cfg","scene":"s1"}
   ],
   "object":[
     {"path":"res/cfg/npc.cfg","type":"npc"}
   ],
-  "script":[
-    {"path":"res/ac/ac01.js","callback":""}
+  "scene":[
+    {"path":"res/cfg/scene/loading.cfg","id":"loading","default":true,"prepare":"s1"}
+    ,{"path":"res/cfg/scene/s1.cfg","id":"s1","prepare":"s2"}
   ]
 }
